--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
+    "socket.io-client": "^2.2.0",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
